2017-02-25         Manuel Collado        <m-collado@users.sourceforge.net>

	* awklib/csv/csv.awk: Minor fix.
	* test/Makefile.am: Fix AWKPATH for tests.

2017-02-23         Manuel Collado        <m-collado@users.sourceforge.net>

	* First alpha version 0.1.0.
	* Implements the CSV input mode by means of an awk emulation layer,
	included in the csv.awk file.